
const Map<String, String> typeIcons = {
  'NORMAL': 'assets/icons/Miniature_Type_Normal_GO.png',
  'FIRE': 'assets/icons/Miniature_Type_Feu_GO.png',
  'WATER': 'assets/icons/Miniature_Type_Eau_GO.png',
  'GRASS': 'assets/icons/Miniature_Type_Plante_GO.png',
  'ELECTRIC': 'assets/icons/Miniature_Type_Électrik_GO.png',
  'ICE': 'assets/icons/Miniature_Type_Glace_GO.png',
  'FIGHTING': 'assets/icons/Miniature_Type_Combat_GO.png',
  'POISON': 'assets/icons/Miniature_Type_Poison_GO.png',
  'GROUND': 'assets/icons/Miniature_Type_Sol_GO.png',
  'FLYING': 'assets/icons/Miniature_Type_Vol_GO.png',
  'PSYCHIC': 'assets/icons/Miniature_Type_Psy_GO.png',
  'BUG': 'assets/icons/Miniature_Type_Insecte_GO.png',
  'ROCK': 'assets/icons/Miniature_Type_Roche_GO.png',
  'GHOST': 'assets/icons/Miniature_Type_Spectre_GO.png',
...
