{
  "@@locale": "fr",

  "appTitle": "Pokédex",
  "tabRegions": "RÉGIONS",
  "tabGames": "JEUX",
  "tabNational": "NATIONAL",

  "tabSprites": "SPRITES",
  "tabInfo": "INFOS",
  "tabBattle": "COMBAT",
  "tabEvolutions": "ÉVOLUTIONS",
...
